@@ -171,17 +171,24 @@ class HeartbeatThread : public Thread,
   void getNewsFromAgencyForCoordinator();
 
   //////////////////////////////////////////////////////////////////////////////
+  /// @brief update the server mode from the slice
+  //////////////////////////////////////////////////////////////////////////////
+
+  void updateDBServers();
+  void updateServers();
+
+ public:
+  //////////////////////////////////////////////////////////////////////////////
   /// @brief bring the db server in sync with the desired state
   //////////////////////////////////////////////////////////////////////////////
 
- public:
   void notify();
 
+ private:
   //////////////////////////////////////////////////////////////////////////////
   /// @brief update the local agent pool from the slice
   //////////////////////////////////////////////////////////////////////////////
 
- private:
   void updateAgentPool(arangodb::velocypack::Slice const& agentPool);
 
   //////////////////////////////////////////////////////////////////////////////
@@ -309,7 +316,10 @@ class HeartbeatThread : public Thread,
   std::atomic<uint64_t> _lastCurrentVersionNoticed;
   // For periodic update of the current DBServer list:
   std::atomic<int> _updateCounter;
-      
+  // For event-based update of the current DBServer list:
+  std::atomic<bool> _updateDBServers;
+  std::atomic<bool> _updateCoordinators;
+
   /// @brief point in time the server last reported itself as unhealthy (used
   /// to prevent log spamming on every occurrence of unhealthiness)
   std::chrono::steady_clock::time_point _lastUnhealthyTimestamp;
